--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,14 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <h1>Sign Up Below:</h1>
+    <form method="POST" action="/login">
+      <label for="username">Username: </label>
+      <input type="text" id="username" name="username"><br>
+      <label for="password">Password: </label>
+      <input type="text" id="password" name="password"><br>
+      <br>
+      <input type="submit" id="login" value="Log In">
+    </form>
   </body>
 </html>
